--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -160,54 +160,54 @@
                     <li>
                         <a href="#">
 
-                            <h3>Titulo</h3>
+                            <h3>RockNews</h3>
 
                         </a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Argentina</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Mexico</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Colombia</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Uruguay</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">RSS</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Ultimas Noticias</a>
                     </li>
                 </ul>
 
                 <ul>
                     <li>
                         <a href="#">
-                            <h3>Titulo</h3>
+                            <h3>Contactenos</h3>
 
                         </a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Contacto</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Redaccion</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Contacto Comercial</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Media Kit</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Representantes</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Otros contactos</a>
                     </li>
                 </ul>
 
