--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="index.html">Mi CV/Portafolio</a></h1>
+            <h1 class="logo"><a href="index.html">Mi CV/Portfolio</a></h1>
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
@@ -46,16 +46,16 @@
     </header>
     <!-- End Header -->
 
+
     <!-- ======= Hero Section ======= -->
+
     <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/fondo.jpg)">
         <div class="overlay-itro"></div>
         <div class="hero-content display-table">
             <div class="table-cell">
                 <div class="container">
-                    <!--<p class="display-6 color-d">Hello, world!</p>-->
                     <h1 class="hero-title mb-4">Arturo Grottoli</h1>
                     <p class="hero-subtitle"><span class="typed" data-typed-items="Desarrollador,Profesional de las telecomunicaciones,  Docente, Ingeniero electrónico en formación"></span></p>
-                    <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
                 </div>
             </div>
         </div>
@@ -97,9 +97,9 @@
                                         <div class="progress">
                                             <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
-                                        <span>JAVASCRIPT</span> <span class="pull-right">50%</span>
+                                        <span>JAVASCRIPT</span> <span class="pull-right">55%</span>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -130,6 +130,7 @@
         <!-- End About Section -->
 
         <!-- ======= Services Section ======= -->
+
         <section id="services" class="services-mf pt-5 route">
             <div class="container">
                 <div class="row">
@@ -190,7 +191,7 @@
 
                     <!-- End Services Section -->
 
-                    <!-- ======= FORMACION Section ======= -->
+                    <!-- ======= Education Section ======= -->
 
                     <section id="study" class="study-mf sect-pt4 route">
                         <div class="container">
@@ -206,8 +207,6 @@
                                             </div>
                                             <ul>
 
-
-                                                <!-- ======= Resume Section ======= -->
                                                 <section id="resume" class="resume">
                                                     <div class="container" data-aos="fade-up">
 
@@ -221,50 +220,36 @@
                                                                 <div class="resume-item pb-0">
                                                                     <h4>ING. ELECTRONICA </h4>
                                                                     <p><em>Universidad Nacional de La Plata. Actualmente cursando las ultimas materias y con proyeccion de conseguir el titulo con orientacion a los sistemas digitales y computadoras en el año 2022.</em></p>
-                                                                    <ul>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-lg-6">
 
+                                                                <div class="resume-item">
+                                                                    <h4>Cursos y talleres</h4>
+                                                                    <ul>
+                                                                        <li>2021-CURSO DE TESTING,DEBUGGING MANUAL Y AUTOMATIZADO CON SELENIUM (Udemy)</li>
+                                                                        <li>2020-CURSO DESARROLLADOR WEB FULL-STACK (LinkedIn Learning) </li>
+                                                                        <li>2019-CURSO BASICO DE LINUX Y PROCESOS, UNLP.</li>
+                                                                        <li>2019-REALIZACION DE APPS CON AUTOMATE Y APPINVENTOR, UNLP.</li>
                                                                     </ul>
                                                                 </div>
 
-
-
                                                             </div>
-                                                            <div class="col-lg-6">
-                                                                <div>
-                                                                    <div>
-                                                                        <div class="resume-item">
-                                                                            <h4>Cursos y talleres</h4>
+                                                        </div>
 
-
-                                                                            <ul>
-                                                                                <li>2021-CURSO DE TESTING,DEBUGGING MANUAL Y AUTOMATIZADO CON SELENIUM (Udemy)</li>
-                                                                                <li>2020-CURSO DESARROLLADOR WEB FULL-STACK (LinkedIn Learning) </li>
-                                                                                <li>2019-CURSO BASICO DE LINUX Y PROCESOS, UNLP.</li>
-                                                                                <li>2019-REALIZACION DE PPS CON APPINVENTOR Y AUTOMATE, UNLP.</li>
-                                                                            </ul>
-                                                                        </div>
-
-                                                                    </div>
-                                                                </div>
-
-                                                            </div>
+                                                    </div>
                                                 </section>
-                                                <!-- End Resume Section -->
+
                                             </ul>
-                                            </div>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
                 </div>
             </div>
-            </div>
-            </div>
-            </section>
-            <!-- End FORMACION Section -->
+
+            <!-- End education Section -->
 
             <!-- ======= Portfolio Section ======= -->
             <section id="work" class="portfolio-mf sect-pt4 route">
@@ -276,7 +261,7 @@
                                     Portfolio
                                 </h3>
                                 <p class="subtitle-a">
-                                    Muestras de trabajos realizados Freelance
+                                    Muestras de trabajos realizados de manera Freelance
                                 </p>
                                 <div class="line-mf"></div>
                             </div>
@@ -287,7 +272,7 @@
                             <div class="work-box">
                                 <a href="assets/img/rock.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                     <div class="work-img">
-                                        <img src="assets/img/rock.jpg" alt="" class="img-fluid">
+                                        <img src="assets/img/rock.jpg" alt="Rock News" class="img-fluid">
                                     </div>
                                 </a>
                                 <div class="work-content">
@@ -312,7 +297,7 @@
                             <div class="work-box ">
                                 <a href="assets/img/m.jpg " data-gallery="portfolioGallery " class="portfolio-lightbox ">
                                     <div class="work-img ">
-                                        <img src="assets/img/movies.jpg " alt=" " class="img-fluid ">
+                                        <img src="assets/img/movies.jpg " alt="Movies" class="img-fluid ">
                                     </div>
                                 </a>
                                 <div class="work-content ">
@@ -320,8 +305,8 @@
                                         <div class="col-sm-8 ">
                                             <h2 class="w-title ">Proyecto 2</h2>
                                             <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">18 Sep. 2018</span>
-                                                <h6>Solo muestra</h6>
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">15 Abril 2021</span>
+                                                <h6>Solo link a otra pagina</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4 ">
@@ -337,7 +322,7 @@
                             <div class="work-box ">
                                 <a href="assets/img/basket.jpg " data-gallery="portfolioGallery " class="portfolio-lightbox ">
                                     <div class="work-img ">
-                                        <img src="assets/img/basket.jpg " alt=" " class="img-fluid ">
+                                        <img src="assets/img/basket.jpg " alt="NBA" class="img-fluid ">
                                     </div>
                                 </a>
                                 <div class="work-content ">
@@ -346,7 +331,7 @@
                                             <h2 class="w-title ">Proyecto 3</h2>
                                             <div class="w-more ">
                                                 <span class="w-ctegory ">Web Design</span> / <span class="w-date ">18 Sep. 2018</span>
-                                                <h6>Solo</h6>
+                                                <h6>Solo link a otra pagina</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4 ">
@@ -363,7 +348,8 @@
 
 
                         <!-- ======= Contact Section ======= -->
-                        <section id="contact " class="paralax-mf footer-paralax bg-image sect-mt4 route " style="background-image: url(assets/img/overlay-bg.jpg) ">
+
+                        <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route " style="background-image: url(assets/img/overlay-bg.jpg) ">
                             <div class="overlay-mf "></div>
                             <div class="container ">
                                 <div class="row ">
