--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -11,6 +11,9 @@
     <!--Font Oswald-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap" rel="stylesheet">
+    <!--Font Rock-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
     <!--Custom CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,6 +28,7 @@
         <nav class="nav-main">
             <img src="/Proyecto1/img/Rock-logo.png" alt="Rock Logo" class="nav-brand">
             <ul class="nav-menu">
+
                 <li>
                     <a href="# ">Inicio</a>
                 </li>
@@ -37,8 +41,15 @@
                 <li>
                     <a href="# ">Novedades</a>
                 </li>
+                <li>
+                    <a href="# ">Contacto</a>
+                </li>
+
             </ul>
             <ul class="nav-menu-right ">
+                <li>
+                    <h3>Rock News. Descubrí lo nuevo del mundo del Rock!</h3>
+                </li>
                 <li>
                     <a href="# ">
                         <i class="fa fa-search " aria-hidden="true ">
@@ -53,8 +64,8 @@
         <!--showcase-->
 
         <header class="showcase">
-            <h2>Noticias de hoy</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate ipsum nostrum rem, placeat hic architecto reprehenderit ad tempore deserunt vitae, sed ab corporis cum numquam doloribus tempora sapiente aspernatur quos!</p>
+            <h2>Noticia de la semana</h2>
+            <p>Se cumple un nuevo aniversario del fallecimiento del Carpo, en esta fecha su hijo Luciano lo recuerda y planifica la nueva gira de Riff, junto con miembros originales. Conoce la ultima formacion de la mitica banda de Hard Rock.</p>
             <a href="#" class="btn">Leer Mas <i class="fas fa-angle-double-right"></i></a>
         </header>
 
@@ -89,8 +100,8 @@
 
         <section class="cards-banner-one">
             <div class="content">
-                <h2>Lorem ipsum dolor </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim omnis perferendis magni aspernatur voluptate illo ad modi architecto animi a!</p>
+                <h2>Lo nuevo en News Rock:</h2>
+                <p>Enterate de todos los lanzamientos musicales de la semana en el portal de Rock más importante de Argentina</p>
                 <a href="#" class="btn">Leer mas<i class="fas fa-angle-double-right"></i></a>
             </div>
         </section>
@@ -98,27 +109,27 @@
         <!--News Cards-->
         <div class="news-cards">
             <div>
-                <img src="/Proyecto1/img/ac-dc.jpg" alt="ac-dc">
-                <h3>Lo nuevo de AC/DC</h3>
-                <p>'Power Up', el flamante disco de AC/DC, ya está disponible y ha visto la luz, ¡ya lo puedes escuchar entero!</p>
+                <img src="/Proyecto1/img/kapanga.jpg" alt="Kapanga">
+                <h3>25 Años de Kapanga</h3>
+                <p>La banda de Quilmes comienza la gira en la cual planea llevar sus festejos por distintos escenarios del pais. Conoce las fechas y cuales serán los protocolos.</p>
                 <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
-                <img src="/Proyecto1/img/am.jpg" alt="am">
-                <h3>AM Rompe youtube</h3>
-                <p>El video "Do i wanna know" de Arctic Monkeys supera el billon de reproducciones en youtube. La banda de Sheffield ahora forma parte de los menos de 25 proyectos en el mundo que han logrado superar la cifra.</p>
+                <img src="/Proyecto1/img/rompantodo.jpg" alt="Rompan">
+                <h3>Rompan Todo!</h3>
+                <p>La plataforma Netflix presenta un nuevo documental, en el cual distintos artistas como por ejemplo Soda Stereo, Café Tacvba, aterciopelados y otras bandas relantan la evolucion del rock en latinoamerica.</p>
                 <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
-                <img src="/Proyecto1/img/ca7riel.jpg" alt="cato">
-                <h3>Ca7riel featuring</h3>
-                <p>Luego de la presentacion del videoclip "polvo" Cato continua generando nuevas canciones. Conocé sus nuevas colaboraciones.</p>
+                <img src="/Proyecto1/img/spoty.jpg" alt="Spoty">
+                <h3>Las más escuchadas</h3>
+                <p>Spotify, la principal plataforma de difusion musical de los ultimos tiempos presenta el ranking con las 10 canciones de rock con mas reproducciones.</p>
                 <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
-                <img src="/Proyecto1/img/recital.jpg" alt="recital">
-                <h3>Vuelve la normalidad?</h3>
-                <p>Editorial acerca de la posible vuelta de los recitales multitudinarios. Como van a ser los protocolos? Es posible volver a hacer pogo?</p>
+                <img src="/Proyecto1/img/foofighters.jpg" alt="Foo">
+                <h3>Entra Alice Cooper?</h3>
+                <p>El interminable rey del shock rock se autopostuló como posible reemplazo de Dave Grohl en el caso de que Foo Fighters lo requiera en algun momento.</p>
                 <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
             </div>
 
@@ -127,8 +138,8 @@
 
         <section class="cards-banner-two">
             <div class="content">
-                <h2>Lorem ipsum dolor </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim omnis perferendis magni aspernatur voluptate illo ad modi architecto animi a!</p>
+                <h2>Efemerides de Rock </h2>
+                <p>Conocé los sucesos más importantes de los ultimos años dia a dia. Shows multitudinarios, lanzamientos de discos, aniversarios de bandas, nacimientos y muertes. Todo en esta seccion!</p>
                 <a href="#" class="btn">Leer mas<i class="fas fa-angle-double-right"></i></a>
             </div>
         </section>
@@ -214,27 +225,27 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <h3>Titulo</h3>
+                            <h3>Redes Sociales</h3>
 
                         </a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Instagram</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Facebook</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Linkedin</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#">Twitter</a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#"></a>
                     </li>
                     <li>
-                        <a href="#">Blockchain</a>
+                        <a href="#"></a>
                     </li>
                 </ul>
 
