--- a/index.html
+++ b/index.html
@@ -221,9 +221,23 @@
                                                                     <h4>ING. ELECTRONICA </h4>
                                                                     <p><em>Universidad Nacional de La Plata. Actualmente cursando las ultimas materias y con proyeccion de conseguir el titulo con orientacion a los sistemas digitales y computadoras en el año 2022.</em></p>
                                                                 </div>
+
+                                                                <div class="resume-item">
+                                                                    <h4>Conocimientos en informatica</h4>
+                                                                    <ul>
+                                                                        <li>Programación en C, JavaScript, HTML, CSS, PYTHON, Node.js, PHP, SQL.</li>
+                                                                        <li>Programas de Simulación (Matlab y Pspice) </li>
+                                                                        <li>Programas de generación de aplicaciones(Appinventor y Automate)
+                                                                        </li>
+                                                                        <li>Plataformas de carga de datos (Exactian, EHS, SHP)</li>
+                                                                        <li>Paquete Office (Avanzado)</li>
+                                                                    </ul>
+                                                                </div>
                                                             </div>
                                                             <div class="col-lg-6">
-
+                                                                <br>
+                                                                <br>
+                                                                <br>
                                                                 <div class="resume-item">
                                                                     <h4>Cursos y talleres</h4>
                                                                     <ul>
@@ -233,6 +247,17 @@
                                                                         <li>2019-REALIZACION DE APPS CON AUTOMATE Y APPINVENTOR, UNLP.</li>
                                                                     </ul>
                                                                 </div>
+
+                                                                <br>
+                                                                <div class="resume-item">
+                                                                    <h4>Idiomas</h4>
+                                                                    <ul>
+                                                                        <li>Ingles, avanzado.</li>
+                                                                        <li>Portugues, basico. </li>
+
+                                                                    </ul>
+                                                                </div>
+
 
                                                             </div>
                                                         </div>
@@ -306,7 +331,7 @@
                                             <h2 class="w-title ">Proyecto 2</h2>
                                             <div class="w-more ">
                                                 <span class="w-ctegory ">Web Design</span> / <span class="w-date ">15 Abril 2021</span>
-                                                <h6>Solo link a otra pagina</h6>
+                                                <h6>Solo link a otra pagina.</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4 ">
@@ -331,7 +356,7 @@
                                             <h2 class="w-title ">Proyecto 3</h2>
                                             <div class="w-more ">
                                                 <span class="w-ctegory ">Web Design</span> / <span class="w-date ">18 Sep. 2018</span>
-                                                <h6>Solo link a otra pagina</h6>
+                                                <h6>Solo link a otra pagina.</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4 ">
@@ -364,11 +389,11 @@
                                                             </h5>
                                                         </div>
                                                         <div>
-                                                            <form action="forms/contact.php " method="post " role="form " class="php-email-form ">
+                                                            <form action="contact.php" method="post">
                                                                 <div class="row ">
                                                                     <div class="col-md-12 mb-3 ">
                                                                         <div class="form-group ">
-                                                                            <input type="text " name="name " class="form-control " id="name " placeholder="Nombre " required>
+                                                                            <input type="text " name="nombre" class="form-control " id="nombre" placeholder="Nombre " required>
                                                                         </div>
                                                                     </div>
                                                                     <div class="col-md-12 mb-3 ">
@@ -378,7 +403,7 @@
                                                                     </div>
                                                                     <div class="col-md-12 mb-3 ">
                                                                         <div class="form-group ">
-                                                                            <input type="text " class="form-control " name="subject " id="subject " placeholder="Asunto " required>
+                                                                            <input type="text " class="form-control " name="asunto " id="asunto" placeholder="Asunto " required>
                                                                         </div>
                                                                     </div>
                                                                     <div class="col-md-12 ">
@@ -386,13 +411,8 @@
                                                                             <textarea class="form-control " name="message " rows="5 " placeholder="Mensaje " required></textarea>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="col-md-12 text-center my-3 ">
-                                                                        <div class="loading ">Loading</div>
-                                                                        <div class="error-message "></div>
-                                                                        <div class="sent-message ">Tu mensaje fue enviado exitosamente. Gracias!</div>
-                                                                    </div>
                                                                     <div class="col-md-12 text-center ">
-                                                                        <button type="submit " class="button button-a button-big button-rouded ">Enviar Mensaje</button>
+                                                                        <button type="submit " id="submit" class=" button button-a button-big button-rouded ">Enviar Mensaje</button>
                                                                     </div>
                                                                 </div>
                                                             </form>
