--- a/Boot.html
+++ b/Boot.html
@@ -19,14 +19,14 @@
             <div class="col-lg-6">
                 <h3 class="resume-title">Boot Argentina S.A.</h3>
                 <div class="resume-item">
-                    <h4>Proyect Manager</h4>
+                    <h4>Project Manager</h4>
                     <h5>(2014 - 2018)</h5>
                     <p><em>Boot Argentina es una empresa dedicada a la instalacion, ejecucion y mantenimiento de instalaciones electricas, electromecanicas y electronicas. Incluye la instalacion de antenas, pararrayos, sistemas de alarmas, camaras y sistemas de telecomunicacion.</em>
                     </p>
                     <p><em>Ademas de la parte de  telecomunicaciones tambien cuenta con otra, encargada de IT, donde se ejecuta la venta de maquinas, equipos, programas y soluciones informaticas.</em>
                     </p>
                     <p>
-                        <h5>Proyect Manager (2017-2018)</h5>
+                        <h5>Project Manager (2017-2018)</h5>
                     </p>
                     <h5>Proyecto OYM ERICSSON para CLARO zona AMBA, AMBA NORTE y BAS</h5>
                     <ul>
