--- a/Liramatic.html
+++ b/Liramatic.html
@@ -28,7 +28,7 @@
                 </p>
                 <div class="resume-item">
                     <p>
-                        <h5>Proyect Manager SWAP ERICSSON para MOVISTAR en todo el país</h5>
+                        <h5>Project Manager SWAP ERICSSON para MOVISTAR en todo el país</h5>
                     </p>
                     <ul>
                         <li>Responsable de armado y coordinación de grupos de trabajo.</li>
