--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Arturo Grottoli</title>
+    <title>Arturo Grottoli</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -83,7 +83,7 @@
                                                 <p><span class="title-s">Nombre: </span> <span>Arturo Grottoli</span></p>
                                                 <p><span class="title-s">Perfil: </span> <span>Profesional de sistemas y telecomunicaciones</span></p>
                                                 <p><span class="title-s">Email: </span> <span>arturogrottoli@gmail.com</span></p>
-                                                <p><span class="title-s">Telefono: </span> <span> 221-6404847</span></p>
+                                                <p><span class="title-s">Teléfono: </span> <span> 221-6404847</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -97,9 +97,9 @@
                                         <div class="progress">
                                             <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
-                                        <span>JAVASCRIPT</span> <span class="pull-right">55%</span>
+                                        <span>JAVASCRIPT</span> <span class="pull-right">75%</span>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -117,7 +117,7 @@
                                             Trabaje muchos años en el rubro de las telecomunicaciones y ahora busco un cambio profesional, insertarme en el mundo IT.
                                         </p>
                                         <p class="lead">
-                                            Actualmente me encuentro cursando las ultimas materias de la carrera Ingenieria Electrónica con orientación a los sistemas digitales y computadoras.
+                                            Actualmente me encuentro cursando las ultimas materias de la carrera Ingeniería Electrónica con orientación a los sistemas digitales y computadoras.
                                         </p>
                                     </div>
                                 </div>
@@ -167,7 +167,7 @@
                                 <a href="Boot.html"><span class="ico-circle"><i class="bi bi-card-checklist"></i></span></a>
                             </div>
                             <div class="service-content">
-                                <h2 class="s-title">Proyect Manager</h2>
+                                <h2 class="s-title">Project Manager</h2>
                                 <p class="s-description text-center">
                                     BOOT ARGENTINA S.A.
                                 </p>
@@ -218,14 +218,14 @@
                                                             <div class="col-lg-6">
                                                                 <h3 class="resume-title">Formación académica</h3>
                                                                 <div class="resume-item pb-0">
-                                                                    <h4>ING. ELECTRONICA </h4>
-                                                                    <p><em>Universidad Nacional de La Plata. Actualmente cursando las ultimas materias y con proyeccion de conseguir el titulo con orientacion a los sistemas digitales y computadoras en el año 2022.</em></p>
+                                                                    <h4>ING. ELECTRÓNICA </h4>
+                                                                    <p><em>Universidad Nacional de La Plata. Actualmente cursando las últimas materias y con proyección de conseguir el titulo con orientación a los sistemas digitales y computadoras en el año 2022.</em></p>
                                                                 </div>
 
                                                                 <div class="resume-item">
-                                                                    <h4>Conocimientos en informatica</h4>
+                                                                    <h4>Conocimientos adquiridos:</h4>
                                                                     <ul>
-                                                                        <li>Programación en C, JavaScript, HTML, CSS, PYTHON, Node.js, PHP, SQL.</li>
+                                                                        <li>Programación en C, HTML, CSS,JavaScript, Python, NodeJS, ReactJS, SQL.</li>
                                                                         <li>Programas de Simulación (Matlab y Pspice) </li>
                                                                         <li>Programas de generación de aplicaciones(Appinventor y Automate)
                                                                         </li>
@@ -241,6 +241,7 @@
                                                                 <div class="resume-item">
                                                                     <h4>Cursos y talleres</h4>
                                                                     <ul>
+                                                                        <li>2021-CURSO JAVASCRIPT CODERHOUSE</li>
                                                                         <li>2021-CURSO DE TESTING,DEBUGGING MANUAL Y AUTOMATIZADO CON SELENIUM (Udemy)</li>
                                                                         <li>2020-CURSO DESARROLLADOR WEB FULL-STACK (LinkedIn Learning) </li>
                                                                         <li>2019-CURSO BASICO DE LINUX Y PROCESOS, UNLP.</li>
@@ -252,8 +253,8 @@
                                                                 <div class="resume-item">
                                                                     <h4>Idiomas</h4>
                                                                     <ul>
-                                                                        <li>Ingles, avanzado.</li>
-                                                                        <li>Portugues, basico. </li>
+                                                                        <li>Inglés, avanzado.</li>
+                                                                        <li>Portugues, principiante. </li>
 
                                                                     </ul>
                                                                 </div>
@@ -295,18 +296,18 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="work-box">
-                                <a href="assets/img/rock.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                                <a href="assets/img/coderv-negro.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                     <div class="work-img">
-                                        <img src="assets/img/rock.jpg" alt="Rock News" class="img-fluid">
+                                        <img src="assets/img/coderv-negro.png" alt="CoderVision!" class="img-fluid">
                                     </div>
                                 </a>
                                 <div class="work-content">
                                     <div class="row">
                                         <div class="col-sm-8">
-                                            <h2 class="w-title">Rock News</h2>
+                                            <h2 class="w-title">CoderVision!</h2>
                                             <div class="w-more">
-                                                <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Mar. 2021</span>
-                                                <h6>Uso de HTML, CSS y JS</h6>
+                                                <span class="w-ctegory">Web Design</span> / <span class="w-date">6 Ago. 2021</span>
+                                                <h6>Proyecto final del curso de JS Coderhouse. HTML, CSS y JS</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4">
@@ -320,23 +321,23 @@
                         </div>
                         <div class="col-md-4 ">
                             <div class="work-box ">
-                                <a href="assets/img/m.jpg " data-gallery="portfolioGallery " class="portfolio-lightbox ">
+                                <a href="assets/img/rock.jpg" data-gallery="portfolioGallery " class="portfolio-lightbox ">
                                     <div class="work-img ">
-                                        <img src="assets/img/movies.jpg " alt="Movies" class="img-fluid ">
+                                        <img src="assets/img/rock.jpg" alt="Movies" class="img-fluid ">
                                     </div>
                                 </a>
                                 <div class="work-content ">
                                     <div class="row ">
                                         <div class="col-sm-8 ">
-                                            <h2 class="w-title ">Proyecto 2</h2>
+                                            <h2 class="w-title ">Rock News</h2>
                                             <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">15 Abril 2021</span>
-                                                <h6>Solo link a otra pagina.</h6>
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">15 Jul 2021</span>
+                                                <h6>Portal de noticias de música.HTML, CSS, JS.</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4 ">
                                             <div class="w-like ">
-                                                <a href="https://www.imdb.com/chart/top/ "> <span class="bi bi-plus-circle "></span></a>
+                                                <a href="Proyecto2/index.html"> <span class="bi bi-plus-circle "></span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -356,7 +357,7 @@
                                             <h2 class="w-title ">Proyecto 3</h2>
                                             <div class="w-more ">
                                                 <span class="w-ctegory ">Web Design</span> / <span class="w-date ">18 Sep. 2018</span>
-                                                <h6>Solo link a otra pagina.</h6>
+                                                <h6>Solo link a una página no realizada.</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4 ">
@@ -385,11 +386,11 @@
                                                     <div class="col-md-6 ">
                                                         <div class="title-box-2 ">
                                                             <h5 class="title-left ">
-                                                                Enviame un mensaje
+                                                                Dejá tu mensaje
                                                             </h5>
                                                         </div>
                                                         <div>
-                                                            <form action="contact.php" method="post">
+                                                            <form id="form" action="https://formspree.io/f/mgernele" method="post">
                                                                 <div class="row ">
                                                                     <div class="col-md-12 mb-3 ">
                                                                         <div class="form-group ">
@@ -421,12 +422,12 @@
                                                     <div class="col-md-6 ">
                                                         <div class="title-box-2 pt-4 pt-md-0 ">
                                                             <h5 class="title-left ">
-                                                                Contactame
+                                                                Contacto
                                                             </h5>
                                                         </div>
                                                         <div class="more-info ">
                                                             <p class="lead ">
-                                                                Para contactos laborales puedes dejarme tu mensaje y yo me comunicare contigo,adicionalmente puedes escribirme a mis redes sociales.
+                                                                Para contactos laborales puedes dejar tu mensaje y te responderé a la brevedad,también recibo mensajes en mis redes sociales.
                                                             </p>
                                                             <ul class="list-ico ">
                                                                 <li><span class="bi bi-geo-alt "></span> La Plata, Argentina</li>
@@ -478,10 +479,11 @@
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js "></script>
-    <script src="assets/vendor/php-email-form/validate.js "></script>
     <script src="assets/vendor/purecounter/purecounter.js "></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js "></script>
     <script src="assets/vendor/typed.js/typed.min.js "></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js "></script>
