--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -2,295 +2,116 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock</title>
-    <!--Font Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!--Font Oswald-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap" rel="stylesheet">
-    <!--Font Rock-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
-    <!--Custom CSS-->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CoderVision!</title>
+
+  <!--Fuentes e iconos-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Titillium+Web:ital,wght@1,600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="icon" href="./img/coderv-azul.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <!-- Estilo CSS -->
+  <link rel="Stylesheet" href="./style.css">
+
 </head>
 
 <body>
 
-    <div class="menu-btn">
-        <i class="fas fa-bars"></i>
+  <!--NavBar-->
+  <nav class="navbar">
+   
+      
+      <button id="btnImagen" alt="Coder Logo" class="nav-brand btninicio">
+        <img src="img/coderv-azul.png" href="./index.html" alt="Coder Logo" class="nav-brand" />
+      </button>
 
-    </div>
-    <div class="container">
-        <nav class="nav-main">
-            <img src="/Proyecto1/img/Rock-logo.png" alt="Rock Logo" class="nav-brand">
-            <ul class="nav-menu">
+      <div class="items">
+        <input type="checkbox" id="cancelbtn" class="checkbtn1">
+        <label for="cancelbtn" class="btn1 cancel-btn"><i class="fa fa-times"></i></label>
+        <ul class="ul1">
+          <li><a id="btninicio" href="#">Inicio</a></li>
 
-                <li>
-                    <a href="# ">Inicio</a>
-                </li>
-                <li>
-                    <a href="# ">Bandas</a>
-                </li>
-                <li>
-                    <a href="# ">Estilos</a>
-                </li>
-                <li>
-                    <a href="# ">Novedades</a>
-                </li>
-                <li>
-                    <a href="# ">Contacto</a>
-                </li>
-
+          <li><a href="#" class="desktop-items">Categorías <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+            <input type="checkbox" id="showdrop" class="checkbtn">
+            <label for="showdrop" class="mobile-items">Categorías <i class="fa fa-caret-down" aria-hidden="true"></i></label>
+            <ul class="drowdown-menu">
+              <li><a id="btnaccion" href="#">Acción</a></li>
+              <li><a id="btnanimacion" href="#">Animación</a></li>
+              <li><a id="btnbiopic" href="#">Biopic</a></li>
+              <li><a id="btnciencia" href="#">Ciencia Ficción</a></li>
+              <li><a id="btncomedia" href="#">Comedia</a></li>
+              <li><a id="btndrama" href="#">Drama</a></li>
+              <li><a id="btnterror" href="#">Terror</a></li>
             </ul>
-            <ul class="nav-menu-right ">
-                <li>
-                    <h3>Rock News. Descubrí lo nuevo del mundo del Rock!</h3>
-                </li>
-                <li>
-                    <a href="# ">
-                        <i class="fa fa-search " aria-hidden="true ">
-                        </i>
+          </li>
 
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <hr>
+          <li><a href="#" id="btnpelis">Películas</a></li>
+          <li><a href="#" id="btnseries">Series</a></li>
+          <li><a href="#" id="btnmilista">Mi Lista</a></li>
+          <li><a href="#" id="btnformulario">Contacto</a></li>
+        </ul>
 
-        <!--showcase-->
+      </div>
 
-        <header class="showcase">
-            <h2>Noticia de la semana</h2>
-            <p>Se cumple un nuevo aniversario del fallecimiento del Carpo, en esta fecha su hijo Luciano lo recuerda y planifica la nueva gira de Riff, junto con miembros originales. Conoce la ultima formacion de la mitica banda de Hard Rock.</p>
-            <a href="#" class="btn">Leer Mas <i class="fas fa-angle-double-right"></i></a>
-        </header>
-
-        <!--News Cards-->
-        <div class="news-cards">
-            <div>
-                <img src="/Proyecto1/img/ac-dc.jpg" alt="ac-dc">
-                <h3>Lo nuevo de AC/DC</h3>
-                <p>'Power Up', el flamante disco de AC/DC, ya está disponible y ha visto la luz, ¡ya lo puedes escuchar entero!</p>
-                <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
-            <div>
-                <img src="/Proyecto1/img/am.jpg" alt="am">
-                <h3>AM Rompe youtube</h3>
-                <p>El video "Do i wanna know" de Arctic Monkeys supera el billon de reproducciones en youtube. La banda de Sheffield ahora forma parte de los menos de 25 proyectos en el mundo que han logrado superar la cifra.</p>
-                <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
-            <div>
-                <img src="/Proyecto1/img/ca7riel.jpg" alt="cato">
-                <h3>Ca7riel featuring</h3>
-                <p>Luego de la presentacion del videoclip "polvo" Cato continua generando nuevas canciones. Conocé sus nuevas colaboraciones.</p>
-                <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
-            <div>
-                <img src="/Proyecto1/img/recital.jpg" alt="recital">
-                <h3>Vuelve la normalidad?</h3>
-                <p>Editorial acerca de la posible vuelta de los recitales multitudinarios. Como van a ser los protocolos? Es posible volver a hacer pogo?</p>
-                <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
-
-        </div>
-
-        <section class="cards-banner-one">
-            <div class="content">
-                <h2>Lo nuevo en News Rock:</h2>
-                <p>Enterate de todos los lanzamientos musicales de la semana en el portal de Rock más importante de Argentina</p>
-                <a href="#" class="btn">Leer mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
-        </section>
-
-        <!--News Cards-->
-        <div class="news-cards">
-            <div>
-                <img src="/Proyecto1/img/kapanga.jpg" alt="Kapanga">
-                <h3>25 Años de Kapanga</h3>
-                <p>La banda de Quilmes comienza la gira en la cual planea llevar sus festejos por distintos escenarios del pais. Conoce las fechas y cuales serán los protocolos.</p>
-                <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
-            <div>
-                <img src="/Proyecto1/img/rompantodo.jpg" alt="Rompan">
-                <h3>Rompan Todo!</h3>
-                <p>La plataforma Netflix presenta un nuevo documental, en el cual distintos artistas como por ejemplo Soda Stereo, Café Tacvba, aterciopelados y otras bandas relantan la evolucion del rock en latinoamerica.</p>
-                <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
-            <div>
-                <img src="/Proyecto1/img/spoty.jpg" alt="Spoty">
-                <h3>Las más escuchadas</h3>
-                <p>Spotify, la principal plataforma de difusion musical de los ultimos tiempos presenta el ranking con las 10 canciones de rock con mas reproducciones.</p>
-                <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
-            <div>
-                <img src="/Proyecto1/img/foofighters.jpg" alt="Foo">
-                <h3>Entra Alice Cooper?</h3>
-                <p>El interminable rey del shock rock se autopostuló como posible reemplazo de Dave Grohl en el caso de que Foo Fighters lo requiera en algun momento.</p>
-                <a href="#">Ver mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
+      
+    <input type="checkbox" id="menubtn" class="checkbtn2">
+    <label for="menubtn" class="btn1 menu-btn"><i class="fa fa-bars"></i></label>
 
 
-        </div>
+      <div class="search-icon">
+        <input type="text" id="searchbar" placeholder="Buscar">
+        <label class="icon">
+          <i class="fa fa-search" id="searchbutton"></i>
+        </label>
 
-        <section class="cards-banner-two">
-            <div class="content">
-                <h2>Efemerides de Rock </h2>
-                <p>Conocé los sucesos más importantes de los ultimos años dia a dia. Shows multitudinarios, lanzamientos de discos, aniversarios de bandas, nacimientos y muertes. Todo en esta seccion!</p>
-                <a href="#" class="btn">Leer mas<i class="fas fa-angle-double-right"></i></a>
-            </div>
-        </section>
-
-        <section class="social">
-            <p>Sigue nuestras redes</p>
-            <div class="links">
-                <a href="#">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="#">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#">
-                    <i class="fab fa-linkedin"></i>
-
-                </a>
-                <a href="#">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </div>
-
-        </section>
+      </div>
 
 
-        <div class="footer-links">
-            <div class="footer-container">
-                <ul>
-                    <li>
-                        <a href="#">
+  </nav>
 
-                            <h3>RockNews</h3>
+  <!--Titulo-->
+  <br>
+  <h1 id="id1" style="display: none;"></h1>
+  <br>
 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">Argentina</a>
-                    </li>
-                    <li>
-                        <a href="#">Mexico</a>
-                    </li>
-                    <li>
-                        <a href="#">Colombia</a>
-                    </li>
-                    <li>
-                        <a href="#">Uruguay</a>
-                    </li>
-                    <li>
-                        <a href="#">RSS</a>
-                    </li>
-                    <li>
-                        <a href="#">Ultimas Noticias</a>
-                    </li>
-                </ul>
+  <!--Cards-->
+  <div id="cardsId" class="container"></div>
 
-                <ul>
-                    <li>
-                        <a href="#">
-                            <h3>Contactenos</h3>
+  <!--Scroll button-->
+  <button class="scroll-top-btn hidden">&#11014;</button>
 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">Contacto</a>
-                    </li>
-                    <li>
-                        <a href="#">Redaccion</a>
-                    </li>
-                    <li>
-                        <a href="#">Contacto Comercial</a>
-                    </li>
-                    <li>
-                        <a href="#">Media Kit</a>
-                    </li>
-                    <li>
-                        <a href="#">Representantes</a>
-                    </li>
-                    <li>
-                        <a href="#">Otros contactos</a>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li>
-                        <a href="#">
-                            <h3>Redes Sociales</h3>
-
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">Instagram</a>
-                    </li>
-                    <li>
-                        <a href="#">Facebook</a>
-                    </li>
-                    <li>
-                        <a href="#">Linkedin</a>
-                    </li>
-                    <li>
-                        <a href="#">Twitter</a>
-                    </li>
-                    <li>
-                        <a href="#"></a>
-                    </li>
-                    <li>
-                        <a href="#"></a>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li>
-                        <a href="#">
-                            <h3>Titulo</h3>
-
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">Blockchain</a>
-                    </li>
-                    <li>
-                        <a href="#">Blockchain</a>
-                    </li>
-                    <li>
-                        <a href="#">Blockchain</a>
-                    </li>
-                    <li>
-                        <a href="#">Blockchain</a>
-                    </li>
-                    <li>
-                        <a href="#">Blockchain</a>
-                    </li>
-                    <li>
-                        <a href="#">Blockchain</a>
-                    </li>
-                </ul>
-
-            </div>
-
-        </div>
+  <!--Footer-->
+  <footer>
+    <div class="footer-content">
+      <h3>CoderVisión!</h3>
+      <p>Podés buscarnos en nuestras redes sociales:</p>
+      <ul class="socials">
+        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.youtube.com/"><i class="fa fa-youtube"></i></a></li>
+        <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin-square"></i></a></li>
+      </ul>
+      <div class="footer-bottom">
+        <p>Copyright &copy;2021 CoderVision! , diseñado por <span>Arturo Grottoli</span></p>
+      </div>
     </div>
 
-    <footer class="footer">
-        <h3>TuRi Copyright</h3>
-    </footer>
+  </footer>
 
-    <!--Scroll reveal-->
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <!--Main Js-->
-    <script src="main.js"></script>
-
-
+  <!--Scripts-->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
