--- a/index.html
+++ b/index.html
@@ -294,6 +294,57 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-md-4 ">
+                            <div class="work-box ">
+                                <a href="assets/img/Argentina.jpg" data-gallery="portfolioGallery " class="portfolio-lightbox ">
+                                    <div class="work-img ">
+                                        <img src="assets/img/Argentina.jpg" alt="Remeras" class="img-fluid ">
+                                    </div>
+                                </a>
+                                <div class="work-content ">
+                                    <div class="row ">
+                                        <div class="col-sm-8 ">
+                                            <h2 class="w-title ">Casacas Futbol!</h2>
+                                            <div class="w-more ">
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Oct 2021</span>
+                                                <h6>Ecommerce de camisetas de futbol, proyecto final del curso de ReactJS CoderHouse.</h6>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4 ">
+                                            <div class="w-like ">
+                                                <a href="https://whispering-fear.surge.sh/"> <span class="bi bi-plus-circle "></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-4 ">
+                            <div class="work-box ">
+                                <a href="assets/img/coleccion.jpeg" data-gallery="portfolioGallery " class="portfolio-lightbox ">
+                                    <div class="work-img ">
+                                        <img src="assets/img/coleccion.jpeg" alt="Mija" class="img-fluid ">
+                                    </div>
+                                </a>
+                                <div class="work-content ">
+                                    <div class="row ">
+                                        <div class="col-sm-8 ">
+                                            <h2 class="w-title ">Mija Productos</h2>
+                                            <div class="w-more ">
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Sep 2021</span>
+                                                <h6>Sitio web del emprendimiento de mochilas para bebes Mija. Se utiliza HTML, CSS, JS y Bootstrap.</h6>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4 ">
+                                            <div class="w-like ">
+                                                <a href="https://arturogrottoli.github.io/Mija/"> <span class="bi bi-plus-circle "></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-md-4">
                             <div class="work-box">
                                 <a href="assets/img/coderv-negro.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -306,13 +357,38 @@
                                         <div class="col-sm-8">
                                             <h2 class="w-title">CoderVision!</h2>
                                             <div class="w-more">
-                                                <span class="w-ctegory">Web Design</span> / <span class="w-date">6 Ago. 2021</span>
-                                                <h6>Proyecto final del curso de JS Coderhouse. HTML, CSS y JS</h6>
+                                                <span class="w-ctegory">Web Design</span> / <span class="w-date">Ago 2021</span>
+                                                <h6>Plataforma de streaming.Proyecto final curso de JavaScript Coderhouse. Utiliza HTML,CSS ,JS y Bootstrap.</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4">
                                             <div class="w-like">
                                                 <a href="/Proyecto1/index.html "> <span class="bi bi-plus-circle "></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 ">
+                            <div class="work-box ">
+                                <a href="assets/img/cerveza.jpg" data-gallery="portfolioGallery " class="portfolio-lightbox ">
+                                    <div class="work-img ">
+                                        <img src="assets/img/cerveza.jpg" alt="Cerveza" class="img-fluid ">
+                                    </div>
+                                </a>
+                                <div class="work-content ">
+                                    <div class="row ">
+                                        <div class="col-sm-8 ">
+                                            <h2 class="w-title ">Cervecería</h2>
+                                            <div class="w-more ">
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Jul 2021</span>
+                                                <h6>Sitio web de una Cervecería.HTML, CSS, JS.</h6>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4 ">
+                                            <div class="w-like ">
+                                                <a href="https://arturogrottoli.github.io/cerveceria/"> <span class="bi bi-plus-circle "></span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -331,8 +407,8 @@
                                         <div class="col-sm-8 ">
                                             <h2 class="w-title ">Rock News</h2>
                                             <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">15 Jul 2021</span>
-                                                <h6>Portal de noticias de música.HTML, CSS, JS.</h6>
+                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">Jul 2021</span>
+                                                <h6>Portal de noticias de música.HTML, CSS, JS y Bootstrap.</h6>
                                             </div>
                                         </div>
                                         <div class="col-sm-4 ">
@@ -344,31 +420,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 ">
-                            <div class="work-box ">
-                                <a href="assets/img/basket.jpg " data-gallery="portfolioGallery " class="portfolio-lightbox ">
-                                    <div class="work-img ">
-                                        <img src="assets/img/basket.jpg " alt="NBA" class="img-fluid ">
-                                    </div>
-                                </a>
-                                <div class="work-content ">
-                                    <div class="row ">
-                                        <div class="col-sm-8 ">
-                                            <h2 class="w-title ">Proyecto 3</h2>
-                                            <div class="w-more ">
-                                                <span class="w-ctegory ">Web Design</span> / <span class="w-date ">18 Sep. 2018</span>
-                                                <h6>Solo link a una página no realizada.</h6>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4 ">
-                                            <div class="w-like ">
-                                                <a href="https://ar.nba.com/ "> <span class="bi bi-plus-circle "></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        
 
                         <!-- End Portfolio Section -->
 
