--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                                         </div>
                                         <div class="col-sm-4 ">
                                             <div class="w-like ">
-                                                <a href="https://arturogrottoli.github.io/cerveceria/"> <span class="bi bi-plus-circle "></span></a>
+                                                <a href="https://arturogrottoli.github.io/Cerveceria/"> <span class="bi bi-plus-circle "></span></a>
                                             </div>
                                         </div>
                                     </div>
