--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                                                 <div class="resume-item">
                                                                     <h4>Conocimientos adquiridos:</h4>
                                                                     <ul>
-                                                                        <li>Programación en C, HTML, CSS,JavaScript, Python, NodeJS, ReactJS, SQL.</li>
+                                                                        <li>Programación en C, HTML, CSS,JavaScript, Python, Bootstrap, ReactJS, SQL.</li>
                                                                         <li>Programas de Simulación (Matlab y Pspice) </li>
                                                                         <li>Programas de generación de aplicaciones(Appinventor y Automate)
                                                                         </li>
@@ -241,7 +241,8 @@
                                                                 <div class="resume-item">
                                                                     <h4>Cursos y talleres</h4>
                                                                     <ul>
-                                                                        <li>2021-CURSO JAVASCRIPT CODERHOUSE</li>
+                                                                        <li>2021-CURSOS CODO A CODO FULLSTACK PYTHON</li>
+                                                                        <li>2021-CURSOS JAVASCRIPT Y REACTJS CODERHOUSE</li>
                                                                         <li>2021-CURSO DE TESTING,DEBUGGING MANUAL Y AUTOMATIZADO CON SELENIUM (Udemy)</li>
                                                                         <li>2020-CURSO DESARROLLADOR WEB FULL-STACK (LinkedIn Learning) </li>
                                                                         <li>2019-CURSO BASICO DE LINUX Y PROCESOS, UNLP.</li>
