--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                         </div>
                                         <div class="col-sm-4 ">
                                             <div class="w-like ">
-                                                <a href="https://whispering-fear.surge.sh/"> <span class="bi bi-plus-circle "></span></a>
+                                                <a href="https://curved-powder.surge.sh/"> <span class="bi bi-plus-circle "></span></a>
                                             </div>
                                         </div>
                                     </div>
